--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -147,7 +147,9 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 				{% endfor %}
 				</table>
 			{% endif %}
+
 			<h3>Project Contribution Information</h3>
+			<p>As part of the application process, all applicants must make at least one contribution to be accepted as an intern for this project.</p>
 			<p>
 			{% if project.repository %}
 				Applicants can contribute to this project through <a href="{{ project.repository }}">the project repository or contribution page</a>.
