Show form errors in red

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -111,6 +111,11 @@
                 @extend .text-muted;
             }
 
+	    .errorlist {
+		@extend .bg-danger;
+		@extend .text-light;
+	    }
+
             .footer-art {
                 background: url(static("css/img/footer-balloons.png")) no-repeat bottom right;
                 height: 160px;
