--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -233,6 +233,9 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 		{% csrf_token %}
 		<input class="btn btn-success" type="submit" name="add" value="Mentor This Project" />
 	</form>
+{% else %}
+	<p>You will need to create an account on the Outreachy website in order to sign up to mentor for this project.</p>
+	<a href="{% url 'register' %}?next={{ request.path }}" class="btn btn-success">Create an Account</a>
 {% endif %}
 
 {% if approved_mentors %}
