--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -74,20 +74,20 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 	</form>
 	{% if unapproved_mentors %}
 		<p><strong>Unapproved Project Mentors:</strong></p>
-		{% for mentor in unapproved_mentors %}
-			<p>{{ mentor.public_name }} &lt;{{ mentor.account.email }}&gt;</p>
+		{% for approval in unapproved_mentors %}
+			<p>{{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</p>
 			<form action="{% url 'project-mentor-status' community_slug=community.slug project_slug=project.slug mentor_id=mentor.pk %}" method="post">
 				{% csrf_token %}
 				<input class="btn btn-success" type="submit" name="approve" value="Approve Mentor" />
 				<input class="btn btn-warning" type="submit" name="reject" value="Reject Mentor" />
 			</form>
 			<ul>
-				{% if mentor.pronouns_to_participants %}<li>Pronouns: {{ mentor.get_pronouns_display }}</li>{% endif %}
-				{% if mentor.timezone %}<li>Timezone: {{ mentor.get_timezone_display }}</li>{% endif %}
-				{% if mentor.primary_language %}<li>Primary language: {{ mentor.get_primary_language_display }}</li>{% endif %}
-				{% if mentor.second_language %}<li>Second language: {{ mentor.get_second_language_display }}</li>{% endif %}
-				{% if mentor.third_language %}<li>Third language: {{ mentor.get_third_language_display }}</li>{% endif %}
-				{% if mentor.fourth_language %}<li>Fourth language: {{ mentor.get_fourth_language_display }}</li>{% endif %}
+				{% if approval.mentor.pronouns_to_participants %}<li>Pronouns: {{ approval.mentor.get_pronouns_display }}</li>{% endif %}
+				{% if approval.mentor.timezone %}<li>Timezone: {{ approval.mentor.get_timezone_display }}</li>{% endif %}
+				{% if approval.mentor.primary_language %}<li>Primary language: {{ approval.mentor.get_primary_language_display }}</li>{% endif %}
+				{% if approval.mentor.second_language %}<li>Second language: {{ approval.mentor.get_second_language_display }}</li>{% endif %}
+				{% if approval.mentor.third_language %}<li>Third language: {{ approval.mentor.get_third_language_display }}</li>{% endif %}
+				{% if approval.mentor.fourth_language %}<li>Fourth language: {{ approval.mentor.get_fourth_language_display }}</li>{% endif %}
 			</ul>
 		{% endfor %}
 	{% endif %}
@@ -236,15 +236,15 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 {% endif %}
 
 {% if approved_mentors %}
-	{% for mentor in approved_mentors %}
-		<p>{{ mentor.public_name }} &lt;{{ mentor.account.email }}&gt;</p>
+	{% for approval in approved_mentors %}
+		<p>{{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</p>
 		<ul>
-			{% if mentor.pronouns_to_participants %}<li>Pronouns: {{ mentor.get_pronouns_display }}</li>{% endif %}
-			{% if mentor.timezone %}<li>Timezone: {{ mentor.get_timezone_display }}</li>{% endif %}
-			{% if mentor.primary_language %}<li>Primary language: {{ mentor.get_primary_language_display }}</li>{% endif %}
-			{% if mentor.second_language %}<li>Second language: {{ mentor.get_second_language_display }}</li>{% endif %}
-			{% if mentor.third_language %}<li>Third language: {{ mentor.get_third_language_display }}</li>{% endif %}
-			{% if mentor.fourth_language %}<li>Fourth language: {{ mentor.get_fourth_language_display }}</li>{% endif %}
+			{% if approval.mentor.pronouns_to_participants %}<li>Pronouns: {{ approval.mentor.get_pronouns_display }}</li>{% endif %}
+			{% if approval.mentor.timezone %}<li>Timezone: {{ approval.mentor.get_timezone_display }}</li>{% endif %}
+			{% if approval.mentor.primary_language %}<li>Primary language: {{ approval.mentor.get_primary_language_display }}</li>{% endif %}
+			{% if approval.mentor.second_language %}<li>Second language: {{ approval.mentor.get_second_language_display }}</li>{% endif %}
+			{% if approval.mentor.third_language %}<li>Third language: {{ approval.mentor.get_third_language_display }}</li>{% endif %}
+			{% if approval.mentor.fourth_language %}<li>Fourth language: {{ approval.mentor.get_fourth_language_display }}</li>{% endif %}
 		</ul>
 	{% endfor %}
 {% endif %}
