Collect project mentor info and display it for coordinators

--- a/home/templates/home/mentorapproval_form.html
+++ b/home/templates/home/mentorapproval_form.html
@@ -4,7 +4,7 @@
 
 <h1>Mentor Information</h1>
 
-<p>Mentors provide need to provide some information to be reviewed by the FOSS community coordinators. Some information (marked as such) will be shown to applicants on the project page.</p>
+<p>Mentors provide need to provide some information to be reviewed by the FOSS community coordinators. Additionally, your project communication channel username will be shown to applicants on the project page.</p>
 
 <form action="" method="post">
     {% csrf_token %}
