--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -25,6 +25,7 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 
 {% if coordinator %}
 	<h2>Coordinator Actions</h2>
+	<h3>Project Approval</h3>
 	{% if not project.approved_license or project.longevity == project.THREE_MONTHS or project.longevity == project.SIX_MONTHS or project.longevity == project.ONE_YEAR or project.community_size == project.SMOL or project.community_size == project.TINY %}
 		<p>Coordinators - please double check with the Outreachy organizers before approving this project!</p>
 	{% else %}
@@ -73,24 +74,32 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 	    {% endif %}
 	</form>
 	{% if unapproved_mentors %}
-		<p><strong>Unapproved Project Mentors:</strong></p>
+		<h3>Approve Mentors</h3>
 		{% for approval in unapproved_mentors %}
 			<p>{{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</p>
-			<form action="{% url 'project-mentor-status' community_slug=community.slug project_slug=project.slug mentor_id=mentor.pk %}" method="post">
+			{% include "home/mentor_approval_warnings.html" %}
+			<form action="{% url 'project-mentor-status' community_slug=community.slug project_slug=project.slug mentor_id=approval.mentor.pk %}" method="post">
 				{% csrf_token %}
 				<input class="btn btn-success" type="submit" name="approve" value="Approve Mentor" />
 				<input class="btn btn-warning" type="submit" name="reject" value="Reject Mentor" />
 			</form>
-			<ul>
-				{% if approval.mentor.pronouns_to_participants %}<li>Pronouns: {{ approval.mentor.get_pronouns_display }}</li>{% endif %}
-				{% if approval.mentor.timezone %}<li>Timezone: {{ approval.mentor.get_timezone_display }}</li>{% endif %}
-				{% if approval.mentor.primary_language %}<li>Primary language: {{ approval.mentor.get_primary_language_display }}</li>{% endif %}
-				{% if approval.mentor.second_language %}<li>Second language: {{ approval.mentor.get_second_language_display }}</li>{% endif %}
-				{% if approval.mentor.third_language %}<li>Third language: {{ approval.mentor.get_third_language_display }}</li>{% endif %}
-				{% if approval.mentor.fourth_language %}<li>Fourth language: {{ approval.mentor.get_fourth_language_display }}</li>{% endif %}
-			</ul>
+			{% include "home/mentor_info.html" %}
 		{% endfor %}
 	{% endif %}
+
+	{% if approved_mentors %}
+		<h3>Review Approved Mentors</h3>
+		{% for approval in approved_mentors %}
+			<p>{{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</p>
+			{% include "home/mentor_approval_warnings.html" %}
+			<form action="{% url 'project-mentor-status' community_slug=community.slug project_slug=project.slug mentor_id=approval.mentor.pk %}" method="post">
+				{% csrf_token %}
+				<input class="btn btn-warning" type="submit" name="reject" value="Reject Mentor" />
+			</form>
+			{% include "home/mentor_info.html" %}
+		{% endfor %}
+	{% endif %}
+
 {% endif %}
 
 <h2>Project Information</h2>
@@ -232,22 +241,9 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 	<a href="{% url 'project-mentor-create' community_slug=community.slug project_slug=project.slug %}" class="btn btn-success">Mentor This Project</a>
 {% else %}
 	<p>You will need to create an account on the Outreachy website in order to sign up to mentor for this project.</p>
-	<a href="{% url 'register' %}?next={{ request.path }}" class="btn btn-success">Create an Account</a>
+	<p><a href="{% url 'register' %}?next={{ request.path }}" class="btn btn-success">Create an Account</a></p>
+	<p>Already created an account? You'll need to login.</p>
+	<p><a href="{% url 'login' %}?next={{ request.path }}" class="btn btn-success">Log In</a></p>
 {% endif %}
-
-{% if approved_mentors %}
-	{% for approval in approved_mentors %}
-		<p>{{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</p>
-		<ul>
-			{% if approval.mentor.pronouns_to_participants %}<li>Pronouns: {{ approval.mentor.get_pronouns_display }}</li>{% endif %}
-			{% if approval.mentor.timezone %}<li>Timezone: {{ approval.mentor.get_timezone_display }}</li>{% endif %}
-			{% if approval.mentor.primary_language %}<li>Primary language: {{ approval.mentor.get_primary_language_display }}</li>{% endif %}
-			{% if approval.mentor.second_language %}<li>Second language: {{ approval.mentor.get_second_language_display }}</li>{% endif %}
-			{% if approval.mentor.third_language %}<li>Third language: {{ approval.mentor.get_third_language_display }}</li>{% endif %}
-			{% if approval.mentor.fourth_language %}<li>Fourth language: {{ approval.mentor.get_fourth_language_display }}</li>{% endif %}
-		</ul>
-	{% endfor %}
-{% endif %}
-
 
 {% endblock %}
