--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -53,7 +53,66 @@ Past community participation in Outreachy
 	<p>This community currently has no approved coordinator.</p>
 {% endif %}
 
+{% if participation_info.list_community is not False %}
+	<h2>Submit a Project</h2>
+	<p>Each mentor will need to submit their own project. The project will then be reviewed and approved by the FOSS community coordinator(s). Additional co-mentors will be able to sign up for the project after it is submitted for review.</p>
+	{% if participation_info.cfp_text %}
+	<p>The coordinator(s) welcome project proposals from community members. {{ participation_info.cfp_text }}</p>
+	{% endif %}
+	<p><a class='btn btn-block btn-primary' href="{% url 'project-participate' community.slug %}">Submit a New Project</a></p>
+	{% if pending_projects %}
+		<h2>Projects waiting for approval</h2>
+		<p>The {{ community.name }} coordinator is currently reviewing the following projects to see if they are a good fit for the Outreachy program and fit with long-term community goals.</p>
+		<ul>
+		{% for project in pending_projects %}
+			<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+		{% endfor %}
+		</ul>
+	{% endif %}
+	{% if approved_projects %}
+		<h2>Approved projects</h2>
+		<p>These projects have been approved to be listed on the community landing page. Mentors are encouraged to start promoting their projects as soon as the Outreachy round opens on {{ current_round.appsopen }}.</p>
+		<ul>
+		{% for project in approved_projects %}
+			{% if project.accepting_new_applicants %}
+				<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+			{% else %}
+				<li>(Closed to new applicants) <a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+			{% endif %}
+		{% endfor %}
+		</ul>
+	{% endif %}
+	{% if rejected_projects %}
+		<h2>Rejected projects</h2>
+		<p>The {{ community.name }} coordinator(s) or Outreachy organizers do not think the following projects are suitable for participation in the {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</p>
+		<ul>
+		{% for project in rejected_projects %}
+			<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+		{% endfor %}
+		</ul>
+	{% endif %}
+	{% comment %} Only show this to people who aren't a coordinator for this community. {% endcomment %}
+{% endif %}
+
+{% if not coordinator %}
+	<h2>New Coordinators or Co-coordinators</h2>
+	<p>If you have been a community coordinator in the past but have not yet created an account on this site, or you would like to volunteer to be a new coordinator and you understand the <a href="/mentor/">coordinator duties</a>, you can sign up to be a community coordinator.</p>
+	<form action="{% url 'community-coordinator-update' community_slug=community.slug coordinator_id=user.id %}" method="post">
+	    {% csrf_token %}
+	    <input class="btn btn-block btn-success" type="submit" name="add" value="Coordinate for This Community" />
+	</form>
+{% else %}
+	{% if coordinator in pending_coordinator_list %}
+		<h2>Coordinator Request Status</h2>
+		<p>Your request to coordinate for this community is under review by the community coordinator and Outreachy organizers.</p>
+	{% elif coordinator in rejected_coordinator_list %}
+		<h2>Coordinator Request Status</h2>
+		<p>Unfortunately, your request to coordinate for this community has been denied.</p>
+	{% endif %}
+{% endif %}
+
 {% if user.is_staff %}
+<hr />
 	<h2>Outreachy Organizer Actions</h2>
 
 	{% if participation_info.reason_for_not_participating %}
@@ -84,6 +143,7 @@ Past community participation in Outreachy
 {% endif %}
 
 {% if coordinator %}
+<hr />
 	<h2>Coordinator Actions</h2>
 	{% if pending_coordinators %}
 		<p><strong>Approve Coordinators</strong></p>
@@ -141,23 +201,31 @@ Past community participation in Outreachy
 			{% endfor %}
 		</ul>
 	{% endif %}
-
 	{% if participation_info.reason_for_not_participating %}
 		<p>Have you changed your mind and decided your community can participate in this round of Outreachy?</p>
-		<a class="btn btn-block btn-success" href="/communities/cfp/{{ community.slug }}/participate/">Community will participate</a>
+		<p><a class="btn btn-block btn-success" href="/communities/cfp/{{ community.slug }}/participate/">Community will participate</a></p>
 		<p>Coordinators provide information about the community for the landing page shown to applicants.</p>
-		<a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a>
+		<p><a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a></p>
 
 	{% elif participation_info.list_community is False %}
 		<p>Unfortunately, the Outreachy organizers have determined your community should not participate in this round. Please <a href="/contact/">contact us</a> for more details.</p>
 		<p>Coordinators provide information about the community for the landing page shown to applicants.</p>
-		<a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a>
+		<p><a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a></p>
 
 	{% else %}
+		<h3>Update Community Information</h3>
 		<p>Do you need to update information about your community's participation in this round (such as number of interns funded or call for volunteers text)?</p>
-		<a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/participate/">Update Round Info</a>
+		<p><a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/participate/">Update Round Info</a></p>
 		<p>Coordinators provide information about the community for the landing page shown to applicants.</p>
-		<a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a>
+		<p><a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a></p>
+		<div class="card">
+			<div class="card-header">Community Information for Applicants</div>
+			<div class="card-body">
+			{% include 'home/community_landing_snippet.html' %}
+			</div>
+		</div>
+		<br>
+		<h3>Coordinator Actions Rarely Taken</h3>
 		<p>Do you need to withdraw this Outreachy community from this internship round?</p>
 		<a class="btn btn-block btn-danger" href="/communities/cfp/{{ community.slug }}/dont-participate/">Withdraw community</a>
 	{% endif %}
@@ -167,70 +235,6 @@ Past community participation in Outreachy
 		<input class="btn btn-block btn-warning" type="submit" name="withdraw" value="Withdraw as Coordinator" />
 	</form>
 
-{% endif %}
-
-
-{% if participation_info.list_community is not False %}
-	<h2>Submit a Project</h2>
-	<a class='btn btn-block btn-primary' href="{% url 'project-participate' community.slug %}">Submit a New Project</a>
-	{% if pending_projects %}
-		<h2>Projects waiting for approval</h2>
-		<p>The {{ community.name }} coordinator is currently reviewing the following projects to see if they are a good fit for the Outreachy program and fit with long-term community goals.</p>
-		<ul>
-		{% for project in pending_projects %}
-			<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-		{% endfor %}
-		</ul>
-	{% endif %}
-	{% if approved_projects %}
-		<h2>Approved projects</h2>
-		<p>These projects have been approved to be listed on the community landing page. Mentors are encouraged to start promoting their projects as soon as the Outreachy round opens on {{ current_round.appsopen }}.</p>
-		<ul>
-		{% for project in approved_projects %}
-			{% if project.accepting_new_applicants %}
-				<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-			{% else %}
-				<li>(Closed to new applicants) <a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-			{% endif %}
-		{% endfor %}
-		</ul>
-	{% endif %}
-	{% if rejected_projects %}
-		<h2>Rejected projects</h2>
-		<p>The {{ community.name }} coordinator(s) or Outreachy organizers do not think the following projects are suitable for participation in the {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</p>
-		<ul>
-		{% for project in rejected_projects %}
-			<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-		{% endfor %}
-		</ul>
-	{% endif %}
-	{% comment %} Only show this to people who aren't a coordinator for this community. {% endcomment %}
-{% endif %}
-
-{% if coordinator %}
-	<h2>Coordinator Actions</h2>
-	<p>Once you are an approved coordinator for this community, you can sign the community up to participate in the current round.</p>
-	<a class="btn btn-block btn-success" href="/communities/cfp/{{ community.slug }}/participate/">Community will participate</a>
-	<p>If your community doesn't have funding or mentor bandwidth to participate in this round, please let us know so we can redirect mentors and volunteers to other participating Outreachy communities.</p>
-	<a class="btn btn-block btn-warning" href="/communities/cfp/{{ community.slug }}/dont-participate/">Community won't participate</a>
-	<p>Coordinators provide information about the community for the landing page shown to applicants.</p>
-	<a class="btn btn-block btn-primary" href="/communities/cfp/{{ community.slug }}/edit/">Update Community Info</a>
-{% endif %}
-
-{% if not coordinator %}
-	<h2>New Coordinators or Co-coordinators</h2>
-	<p>If you have been a community coordinator in the past but have not yet created an account on this site, or you would like to volunteer to be a new coordinator and you understand the <a href="/mentor/">coordinator duties</a>, you can sign up to be a community coordinator.</p>
-	<form action="{% url 'community-coordinator-update' community_slug=community.slug coordinator_id=user.id %}" method="post">
-	    {% csrf_token %}
-	    <input class="btn btn-block btn-success" type="submit" name="add" value="Coordinate for This Community" />
-	</form>
-{% else %}
-	<h2>Coordinator Request Status</h2>
-	{% if coordinator in pending_coordinator_list %}
-		<p>Your request to coordinate for this community is under review by the community coordinator and Outreachy organizers.</p>
-	{% elif coordinator in rejected_coordinator_list %}
-		<p>Unfortunately, your request to coordinate for this community has been denied.</p>
-	{% endif %}
 {% endif %}
 
 {% endblock %}
