--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -15,6 +15,13 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 {% if project.list_project %}
 	<h1>Approved {{ community.name }} Project</h1>
 	<p>This project has been approved by the {{ community.name }} coordinator(s) to participate in the {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</p>
+	
+	<p>
+	Once the application period starts, the community will be listed on the <a href="/{{ current_round.slug }}/">round home page</a>, with a link to
+	the <a href="/{{ current_round.slug }}/communities/{{ community.slug }}">community landing page</a>.
+	Applicants will find detailed information on the landing page about the community and how to contribute to approved projects.</p>
+	<p>
+
 {% elif project.list_project is None %}
 	<h1>Pending {{ community.name }} Project</h1>
 	<p>This project is waiting to be approved by the {{ community.name }} coordinator(s) for participation in the {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</p>
