Move {%include%} templates to a snippet folder.
This makes it a little easier to find the top-level templates at a
glance.

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -16,10 +16,10 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <h2>Outreachy roles</h2>
 <p>There are several different Outreachy roles:<p>
-{% include "home/roles.html" %}
+{% include "home/snippet/roles.html" %}
 
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
-{% include "home/mentor-timeline.html" %}
+{% include "home/snippet/mentor-timeline.html" %}
 
 <h2>Submit a New FOSS community for Organizer Review</h2>
 <p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
