--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -6,7 +6,7 @@ Outreachy internships working with {{ community.name }}
 
 {% block content %}
 
-{% include 'home/community_landing_snippet.html' %}
+{% include "home/snippet/community_landing_snippet.html" %}
 
 {% if approved_projects %}
 	<h1>Open Projects</h1>
