--- a/home/templates/home/community_form.html
+++ b/home/templates/home/community_form.html
@@ -5,6 +5,7 @@
 <h1>Community Information</h1>
 <form action="" method="post">
     {% csrf_token %}
+    {{ form.media }}
     {{ form.as_p }}
     <input class="btn btn-primary" type="submit" value="Save community info" />
 </form>
