Fix template to match field help text for Project longevity

--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -70,7 +70,7 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 	<div class="card border-warning mb-3">
 	    <div class="card-header text-white bg-warning">Warning!</div>
 	    <div class="card-body">
-		<h5 class="card-title">This FOSS project has been accepting contributions for six months or less.</h5>
+		<h5 class="card-title">This FOSS project has been accepting contributions for less than six months.</h5>
 		<p class="card-text">The mentor indicated the FOSS project has been accepting public contributions for {{ project.get_longevity_display }}. Outreachy projects should be well-established projects. While GSoC allows students to create their own open source projects, we find Outreachy interns benefit the most from having a well-established community of project contributors to work with.</p>
 	    </div>
 	</div>
